--- a/css/cover.css
+++ b/css/cover.css
@@ -26,20 +26,52 @@ a:hover {
 
 html,
 body {
-  height: 100%;
-}
+  width: 1100px;
+  height: 700px;}
+
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
+
+.mainSection{
+margin: 0 auto;
+position:  inherit;
+width: 1100px;
+height: 700px;
+
+}
+
+/*horizontal list*/
+
+ul {
+    padding: 0;
+    list-style-type: circle;
+
+}
+
+ul li {
+    display: inline;
+    list-style: none;
+}
+
+ul li a {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+}
+
+
+
+
+
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
+  width: 1100px;
+/*  height: 100%;  For at least Firefox 
+*/  min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
@@ -54,7 +86,7 @@ body {
 
 /* Padding for spacing */
 .inner {
-  padding: 30px;
+  padding: 0px;
 }
 
 
@@ -125,13 +157,13 @@ body {
   top: 0px;
   left: 0px;
   width: 433px;
-  height: 100%;
+  height: auto;
 }
 
 .overlayleft{
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 433px;
+  height: 800px;
   background-image: url(../img/left.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -147,13 +179,13 @@ body {
   top: 0px;
   left: 433px;
   width: 314px;
-  height: 100%;
+  height: auto;
 }
 
 .overlaymiddle{
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 314px;
+  height: 800px:;
   background-image: url(../img/middle.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -169,14 +201,14 @@ body {
   top: 0px;
   right: 0px;
   width: 353px;
-  height: 100%;
+  height: auto;
 
 }
 
 .overlayright{
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 353px;
+  height: 800px;
   background-image: url(../img/right.png);
   background-repeat: no-repeat;
   background-position: center;
